# lib7zip

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  lib7zip.pc.in
src/: 7ZipArchive.cpp  7ZipArchiveItem.cpp  7ZipArchiveOpenCallback.cpp  7ZipArchiveOpenCallback.h  7ZipCodecInfo.cpp  7ZipCompressCodecsInfo.cpp  7ZipCompressCodecsInfo.h  7ZipDllHandler.cpp  7ZipFormatInfo.cpp  7ZipInStreamWrapper.cpp  7ZipInStreamWrapper.h  7ZipObjectPtrArray_stub.cpp  7ZipOpenArchive.cpp  7zipLibrary.cpp  HelperFuncs.cpp  IIDDefinitions.h  Makefile.am  OSFunctions_UnixLike.cpp  OSFunctions_Win32.cpp  compat.h  lib7zip.h
test/: Makefile.am  Test7Zip.cpp  Test7Zip2.cpp  Test7ZipCryptFileName.cpp  Test7ZipDmg.cpp  Test7ZipMulti.cpp  Test7ZipRar5.cpp  Test7ZipSignature.cpp  TestExtractDir.cpp  TestExtractDirPassword.cpp  test7zipprops.cpp  test_archive.cpp
